tests/cases/errors/E01_undirected.case
name: E01-undirected-graph
spec: 9
expect: error
code: E01
=== dot ===
graph { a -- b }
=== error ===
digraph
